2013-12-23  Stuart Hastings <stuart@apple.com>
	    Bill Maddox  <maddox@google.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/41090
	* optimize.c (can_alias_cdtor, populate_clone_array): Split out
	from maybe_clone_body.
	(maybe_thunk_body): New function.
	(maybe_clone_body): Call it.
	* mangle.c (write_mangled_name): Remove code to suppress
	writing of mangled name for cloned constructor or destructor.
	(write_special_name_constructor): Handle decloned constructor.
	(write_special_name_destructor): Handle decloned destructor.
	* method.c (trivial_fn_p): Handle decloning.
	* semantics.c (expand_or_defer_fn_1): Clone after setting linkage.

2013-12-23  Marek Polacek  <polacek@redhat.com>

	PR c++/59111
	* search.c (lookup_conversions): Return NULL_TREE if !CLASS_TYPE_P.

2013-12-20  Trevor saunders  <tsaunders@mozilla.com>

	* semantics.c (build_anon_member_initialization): Replace
	stack_vec<T, N> with auto_vec<T, N>.

2013-12-18  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* parser.c (cp_parser_cilk_simd_clause_name): Changed cilk_clause_name
	to omp_clause_name.	

2013-12-17  Thomas Schwinge  <thomas@codesourcery.com>

	* parser.c (cp_parser_omp_parallel): Fix description.

2013-12-12  Jason Merrill  <jason@redhat.com>

	PR c++/58954
	* pt.c (resolve_overloaded_unification): Use instantiate_template.

2013-12-12  Jakub Jelinek  <jakub@redhat.com>

	PR c++/58627
	* class.c (resolve_address_of_overloaded_function): Don't call ggc_free
	on targs.

2013-12-11  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* cp-tree.h (cilk_valid_spawn): New prototype.
	(gimplify_cilk_spawn): Likewise.
	(create_try_catch_expr): Likewise.
	* decl.c (finish_function): Insert Cilk function-calls when a
	_Cilk_spawn is used in a function.
	* parser.c (cp_parser_postfix_expression): Added RID_CILK_SPAWN and
	RID_CILK_SYNC cases.
	* cp-cilkplus.c (set_cilk_except_flag): New function.
	(set_cilk_except_data): Likewise.
	(cilk_install_body_with_frame_cleanup): Likewise.